--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,8 @@
 }
 
 :root {
-  --bg-color1: #55e6c1;
-  --bg-color2: #25ccf7;
+  --bg-color1: #6c5ce7;
+  --bg-color2: #a29bfe;
   --bg-colorborda1: #b2bec3;
   --bg-colorborda2: #fff;
 }
@@ -45,6 +45,11 @@ body {
   font-weight: 500;
 }
 
+.new-task-container input:focus {
+  outline: none;
+  border-color: var(--bg-color1);
+}
+
 .new-task-button {
   flex: 1;
   border-radius: 5px;
@@ -57,4 +62,44 @@ body {
   padding: 12px;
   margin-left: 12px;
   cursor: pointer;
+}
+
+.new-task-button:hover {
+  background-color: var(--bg-color2);
+  color: #000;
+}
+
+.tasks-container {
+  background-color: var(--bg-colorborda2);
+  padding: 30px 20px;
+  margin-top: 60px;
+  border-radius: 10px;
+  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
+  width: 100%;
+}
+.task-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 6px 0;
+}
+
+.task-item i {
+  background-color: var(--bg-color1);
+  color: var(--bg-colorborda2);
+  padding: 12px;
+  border-radius: 5px;
+}
+
+.task-item i:hover {
+  background-color: var(--bg-color2);
+  color: #000;
+}
+/* classe usada em todos os lugares */
+.error {
+  border: 2px solid red !important;
+}
+
+.error::placeholder {
+  color: red;
 }
